--- a/templates/main.html
+++ b/templates/main.html
@@ -1,5 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
@@ -13,7 +11,7 @@
         </form>        
 
         <form action="/reading" method="GET">
-            <button type="submit">Meter Reading</button>
+            <input type="submit" value="Meter Reading">
         </form>
         
         <form action="/daily_query" method="GET">
